# cluster-api-provider-gcp

./: .gitignore  Gopkg.toml
addons/core-dns/: Dockerfile  Gopkg.toml  Makefile  PROJECT
addons/core-dns/cmd/manager/: main.go
addons/core-dns/config/crds/: addons_v1alpha1_coredns.yaml
addons/core-dns/config/default/: kustomization.yaml  manager_image_patch.yaml  manager_prometheus_metrics_patch.yaml
addons/core-dns/config/manager/: manager.yaml
addons/core-dns/config/rbac/: rbac_role.yaml  rbac_role_binding.yaml  sa.yaml
addons/core-dns/config/rbac/sa/: yaml
addons/core-dns/config/samples/: addons_v1alpha1_coredns.yaml
addons/core-dns/pkg/apis/: addtoscheme_addons_v1alpha1.go
addons/core-dns/pkg/apis/addons/v1alpha1/: coredns_types.go  coredns_types_test.go  doc.go  register.go  zz_generated.deepcopy.go
addons/core-dns/pkg/controller/: add_coredns.go
addons/core-dns/pkg/controller/coredns/: coredns_controller.go
addons/istio/: Dockerfile  Gopkg.toml  Makefile  PROJECT
addons/istio/channels/: stable
addons/istio/cmd/manager/: main.go
addons/istio/config/crds/: addons_v1alpha1_istio.yaml
addons/istio/config/default/: kustomization.yaml  manager_resources_patch.yaml
addons/istio/config/rbac/: rbac_role.yaml
addons/istio/config/samples/: addons_v1alpha1_istio.yaml
addons/istio/pkg/apis/: addtoscheme_addons_v1alpha1.go
addons/istio/pkg/apis/addons/v1alpha1/: doc.go  istio_types.go  istio_types_test.go  register.go  zz_generated.deepcopy.go
addons/istio/pkg/controller/: add_istio.go
addons/istio/pkg/controller/istio/: istio_controller.go  istio_controller_suite_test.go  istio_controller_test.go
api/v1alpha3/: gcpmachine_types.go
cloud/google/: BUILD.bazel  clusteractuator.go  instancestatus.go  machineactuator.go  metadata.go
cloud/google/machinesetup/: BUILD.bazel  config_types.go
cloud/services/compute/: instances.go  network.go
clusterctl/examples/google/: provider-components.yaml.template
cmd/gce-controller/: BUILD.bazel  main.go
cmd/gce-controller/cluster-controller-app/: BUILD.bazel  controller.go
cmd/gce-controller/machine-controller-app/: BUILD.bazel  controller.go
config/crd/bases/: infrastructure.cluster.x-k8s.io_gcpmachines.yaml  infrastructure.cluster.x-k8s.io_gcpmachinetemplates.yaml
configs/: machine_setup_configs.yaml
controllers/: gcpcluster_controller.go
examples/: cluster.yaml  machine.yaml  rbac.yaml
manifests/: addons_role_rbac.yaml  addons_rolebinding_rbac.yaml  manager.yaml
pkg/bootstrap/: BUILD.bazel  README.md  admission.go  interfaces.go  token.go  types.go
