load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/cmd/gce-controller/cluster-controller-app",
    visibility = ["//visibility:public"],
    deps = [
        "//cloud/google:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/cluster:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
