load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/cmd/gce-controller/machine-controller-app",
    visibility = ["//visibility:public"],
    deps = [
        "//cloud/google:go_default_library",
        "//cloud/google/machinesetup:go_default_library",
        "//cmd/gce-controller/machine-controller-app/options:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/machine:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
